tests/invalid/import_inside_class_body/main.py
class C:
    import imports.module_a


def main() -> None:
    x: int = 1
